Make incoming values more visible

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
         }
 
         .main-content {
-            min-height: 60vh;
-            min-width: 50vw;
+            height: 60vh;
+            width: 40vw;
+            
             border: 6px dashed black;
             display: flex;
             flex-direction: column;
@@ -73,6 +74,10 @@
 
         .actions button:active {
             box-shadow: inset 0 -3px black;
+        }
+
+        #incoming-value {
+            font-size: 18px;
         }
 
         #start-button {
