--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
             height: 60vh;
             width: 40vw;
             
-            border: 6px dashed black;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -106,7 +105,8 @@
         </div>
         
         <div class="flex actions">
-            <button id="upload-file" class="round-box">Upload Worker</button>
+            <input type="file" id="upload-file-input" accept=".js" style="display:none">
+            <button id="upload-file-button" class="round-box">Upload Worker</button>
 
             <button id="start-button" class="round-box">Start Receiving Values</button>
             <button id="stop-button" class="round-box">Stop Receiving Values</button>
