Fix styles for upload worker button

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             height: 60vh;
             width: 40vw;
             
+            border: 6px dashed black;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -87,7 +88,7 @@
             background-color: #FC724C;
         }
 
-        #upload-file {
+        #upload-file-button {
             background-color: #87C5E1;
         }
     </style>
