Normalize uploaded script to control start and stop

--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
             <button id="stop-button" class="round-box">Stop Receiving Values</button>
         </div>
     </div>
-
+    
+    <dialog></dialog>
+    
     <script type="module">
         import './main.js'
     </script>
