Link to example scripts

--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
 
                 <h3>Want to check out some example scripts?</h3>
                 <ul>
-                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Window/postMessage">This simple script</a> posts the current time every second.</li>
-                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Window/postMessage">This script</a> posts a Queen's song every 2 seconds.</li>
+                    <li><a href="https://github.com/Dinika/web-worker-demo/blob/main/example-scripts/time-of-the-day.js">This simple script</a> posts the current time every second.</li>
+                    <li><a href="https://github.com/Dinika/web-worker-demo/blob/main/example-scripts/queens-songs.js">This script</a> posts a Queen's song every 2 seconds.</li>
                 </ul>
             </div>
         </div>
