Control when the web worker should post message

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
                 <p>Hit the <span class="round-box bg-blue">Upload Script</span> button to upload a javascript file that contains the script which you would like to run in the worker.</p>
                 
-                <p>Hit the <span class="round-box bg-green">Start Script</span> button to start the execution of your script inside a worker. This is also calls the <span  class="code">start()</span> function in your script (if there is one).</p>
+                <p>Hit the <span class="round-box bg-green">Start Script</span> button to start the execution of your script inside a worker. This also calls the <span  class="code">start()</span> function in your script (if there is one).</p>
                 
                 <p>If your script posts any messages via the <a href="https://developer.mozilla.org/en-US/docs/Web/API/Window/postMessage">postMessage()</a>
                     API to the main script on this page, then it will be displayed as <span class="round-box">Incoming value</span>.
